--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ const App = () => {
       { id: 'i8', name: 'น้ำจิ้มสุกี้กวางตุ้ง (900g)', stock: 0, unit: 'ถุง', baseCost: 55 },
       { id: 'i9', name: 'ถ้วยเหลี่ยม 1oz (50ชิ้น)', stock: 0, unit: 'ห่อ', baseCost: 20 },
       { id: 'i10', name: 'แก้วกระดาษขาว 16oz (50ใบ)', stock: 0, unit: 'แถว', baseCost: 58 },
-      { id: 'i11', name: 'น้ำซุปขวด (ลิต)', stock: 0, unit: 'ขวด', baseCost: 153 }
+      { id: 'i11', name: 'น้ำซุปขวด (ลิตร)', stock: 0, unit: 'ขวด', baseCost: 153 }
     ];
   });
 
